<resources>
    <string name="app_name">TUNEHUB</string>
    <string name="nombre_aplicacion">TUNEHUB</string>
    <string name="eslogan">Que la música te acompañe</string>

    <string name="boton_entrar">ENTRAR</string>
    <string name="boton_registar">REGISTRAR</string>
    <string name="boton_borrar">BORRAR</string>
    <string name="boton_agregar">AGREGAR</string>

    <string name="icono_lista">Lista</string>
    <string name="icono_acerca">Acerca de</string>
    <string name="icono_agregar">Agregar</string>
    <string name="icono_borrar">Borrar</string>
    <string name="icono_salir">Salir</string>


    <string name="texto_titulo">TÍTULO:</string>
    <string name="texto_autor">AUTOR:</string>
    <string name="texto_discografica">DISCOGRÁFICA:</string>

    <string name="entrada_usuario">Usuario</string>
    <string name="entrada_contrasena">Contraseña</string>
    <string name="entrada_nombre_usuario">Nombre de usuario</string>
    <string name="entrada_repetir_contrasena">Repetir contraseña</string>
    <string name="entrada_titulo">TÍTULO DEL ÁLBUM</string>
    <string name="entrada_autor">AUTOR</string>
    <string name="entrada_discografia">DISCOGRAFÍA</string>

    <string name="titulo_acerca">ACERCA DE</string>
    <string name="texto_nombre">Álvaro Astilleros y José Moreno</string>
    <string name="texto_bio">Hace mucho tiempo, en una galaxia muy, muy lejana la fuerza unió los caminos de José y Álvaro. José ha desarrollado una exitosa carrera en diseño 3D a lo largo de 9 años. Álvaro es una voz autorizada en el mundo de la publicidad y el marketing. Tras estudiar juntos DAM afrontan un nuevo reto y aúnan su "know-how" para desarrollar una novedosa aplicación de música. ¡Que la música te acompañe!</string>
    <string name="titulo_caracteristicas">CARACTERÍSTICAS DE LA APP</string>
    <string name="titulo_recycle_lista">Lista</string>
    <string name="titulo_recycle_agregar">Agregar</string>
    <string name="titulo_recycle_borrar">Borrar</string>
    <string name="titulo_recycle_version">Versión</string>
    <string name="titulo_recycle_info">Info</string>
    <string name="texto_recycle_lista">En la sección Lista podrás consultar todos los álbumes que hayas agregado en tu perfil.</string>
    <string name="texto_recycle_agregar">En la sección de Agregar podrás elegir los álbumes que quieres añadir a tu lista especificando título, autor y discográfica. Después solo tienes que presionar el botón de agregar.</string>
    <string name="texto_recycle_borrar">En la sección de Borrar podrás seleccionar un álbum que hayas guardado previamente mediante el título y eliminarlo de tu lista pulsando el botón de borrar.</string>
    <string name="texto_recycle_version">Versión 1.10.4.2.3.15\nFecha de actualización 15/01/2023\nSO requerido Android</string>
    <string name="texto_recycle_info">Te acercamos a momentos mágicos en tu memoria. TuneHub\nes una herramienta que te permite guardar tus álbumes\nfavoritos. ¿Un amigo te ha recomendado un disco y\nquieres acordarte para comprarlo más tarde?\n¡¡Descárgate TuneHub, guárdatelo y despreocúpate\nde esa incómoda sensación de olvidar algo y\ntener que recordarlo!!</string>


    <string name="notificacion_album">Álbum </string>
    <string name="notificacion_album_creado"> creado.</string>
    <string name="notificacion_album_borrado"> borrado.</string>
    <string name="notificacion_album_existe">ya existe.</string>
    <string name="notificacion_album_no_existe">no existe.</string>
    <string name="mensaje_completar_campos">COMPLETE TODOS LOS CAMPOS</string>
    <string name="notificacion_desea_eliminar">¿DESEA ELIMINAR</string>
    <string name="notificacion_si">SI</string>
    <string name="notificacion_borrado">BORRADO CORRECTO</string>
    <string name="notificacion_sesion">SESIÓN CERRADA</string>
    <string name="notificacion_usuario">CONTRASEÑA/USUARIO INCORRECTO</string>
    <string name="usuario_creado">USUARIO CREADO</string>
    <string name="contrasena_diferente">LAS CONTRASEÑAS NO COINCIDEN</string>
    <string name="usuario_existe">USUARIO EXISTE</string>
    <string name="texto_version">Versión 1.10.4.2.3.15</string>

</resources>