<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainLogin">

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="75dp"
        android:background="@drawable/boton_verde_lleno"
        android:fontFamily="@font/aldrich"
        android:onClick="entrar"
        android:text="@string/boton_entrar"
        android:textColor="#333333"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textUsu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#22B473"
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="@string/entrada_usuario"
        android:inputType="textPersonName"
        android:textColor="#22B573"
        android:textColorHint="#22B573"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textContra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textContra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#22B473"
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="@string/entrada_contrasena"
        android:inputType="textPassword"
        android:textColor="#22B573"
        android:textColorHint="#22B573"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEntrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFondoVerde"
        app:layout_constraintVertical_bias="0.62" />

    <ImageView
        android:id="@+id/imgFondoVerde"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo_verde"
        android:transitionName="fondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:transitionName="album"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/music" />

    <TextView
        android:id="@+id/textEslogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/eslogan"
        android:textColor="@color/grisClaro"
        android:textSize="20sp"
        android:transitionName="texto2"
        app:layout_constraintStart_toStartOf="@+id/textNombreAplicacion"
        app:layout_constraintTop_toBottomOf="@+id/textNombreAplicacion" />

    <TextView
        android:id="@+id/textNombreAplicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/nombre_aplicacion"
        android:textColor="@color/negro"
        android:textSize="65sp"
        android:textStyle="bold"
        android:transitionName="texto1"
        app:layout_constraintBottom_toBottomOf="@+id/imgFondoVerde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animation_view"
        app:layout_constraintVertical_bias="0.58000004" />

</androidx.constraintlayout.widget.ConstraintLayout>