<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPerfil">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgFoto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        app:civ_border_color="@color/verde"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/aldrich"
        android:text="Usuario"
        android:textColor="@color/verde"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFoto" />

    <EditText
        android:id="@+id/textUsu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/verde"
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="@string/entrada_nombre_usuario"
        android:inputType="textPersonName"
        android:textColor="@color/verde"
        android:textColorHint="@color/verde"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textContra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textContra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/verde"
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="@string/entrada_contrasena"
        android:inputType="textPassword"
        android:textColor="@color/verde"
        android:textColorHint="@color/verde"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textRecontrasena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textRecontrasena"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="75dp"
        android:backgroundTint="@color/verde"
        android:ems="10"
        android:fontFamily="@font/aldrich"
        android:hint="@string/entrada_repetir_contrasena"
        android:inputType="textPassword"
        android:textColor="@color/verde"
        android:textColorHint="@color/verde"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_borrar"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/boton_rojo_vacio"
        android:fontFamily="@font/aldrich"
        android:onClick="eliminarCuenta"
        android:text="ELIMINAR CUENTA"
        android:textColor="@color/rojo"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_agregar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/boton_verde_lleno"
        android:fontFamily="@font/aldrich"
        android:onClick="cambiar"
        android:text="CAMBIAR"
        android:textColor="@color/negro"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_borrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/back"
        android:onClick="back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>